--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,6 +27,8 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
+	<string>NSLocationWhenInUseUsageDescription</string>
+	<key>the app need to location to locate your live location</key>
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
