--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   bloc: ^8.1.4
   cupertino_icons: ^1.0.6
+  dio: ^5.4.3+1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   google_maps_flutter: ^2.7.0
   location: ^7.0.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
