--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_polyline_points: ^2.0.1
   google_maps_flutter: ^2.7.0
   location: ^7.0.0
   uuid: ^4.4.0
